# rust-gui

./: .gitignore  Cargo.toml  README.md  build.rs  build.yml  build_icon.bat
src/: main.rs
src/core/: mod.rs
src/data/: mod.rs
src/plugin/: mod.rs
src/render/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
ui/: main.slint
ui/components/: about.slint  content_area.slint  floating_panel.slint  menu_bar.slint  menu_item.slint  plugins.slint  sandwich_panel.slint  settings.slint  sidebar.slint  splash.slint  statusbar.slint  submenu.slint  toolbar.slint  workspace.slint
